baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_stream_direct_ref/baml_tests__diagnostic_errors__namespaces_stream_direct_ref__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 34849
---
=== HIR2 ===
class user.Config {
  key: string
}
class user.Response {
  text: string
}
class user.RootWithStreamFields {
  own_stream: user.Config$stream
  llm_stream: root.llm.Config$stream
}
function user.RootUsesLlmStream(r: root.llm.Response$stream) -> string  [expr] {
  {  } r.text
}
function user.RootUsesOwnStream(c: user.Config$stream) -> string  [expr] {
  {  } c.key
}
class user.llm.Config {
  model: string
}
class user.llm.LlmWithStreamFields {
  own_stream: user.llm.Response$stream
  root_stream: root.Config$stream
}
class user.llm.Response {
  text: string
}
function user.llm.LlmUsesOwnStream(r: user.llm.Response$stream) -> string  [expr] {
  {  } r.text
}
function user.llm.LlmUsesRootStream(c: root.Config$stream) -> string  [expr] {
  {  } c.key
}
