baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_stream_direct_ref/baml_tests__diagnostic_errors__namespaces_stream_direct_ref__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Config {
  key: string
}
function user.Config.to_json(self: user.Config) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Config>(self)) : baml.json.json
}
function user.Config.from_json(j: baml.json.json) -> user.Config throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Config
}
class user.Response {
  text: string
}
function user.Response.to_json(self: user.Response) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Response>(self)) : baml.json.json
}
function user.Response.from_json(j: baml.json.json) -> user.Response throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Response
}
function user.RootUsesOwnStream(c: user.Config$stream) -> string throws never {
  { : null | string
    c.key : null | string
  }
  !! 637..647: type mismatch: expected string, got null | string
}
function user.RootUsesLlmStream(r: user.llm.Response$stream) -> string throws never {
  { : null | string
    r.text : null | string
  }
  !! 758..769: type mismatch: expected string, got null | string
}
class user.RootWithStreamFields {
  own_stream: user.Config$stream
  llm_stream: user.llm.Config$stream
}
function user.RootWithStreamFields.to_json(self: user.RootWithStreamFields) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<RootWithStreamFields>(self)) : baml.json.json
}
function user.RootWithStreamFields.from_json(j: baml.json.json) -> user.RootWithStreamFields throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.RootWithStreamFields
}
class user.Config$stream {
  key: null | string
}
class user.Response$stream {
  text: null | string
}
class user.RootWithStreamFields$stream {
  own_stream: null | user.Config$stream
  llm_stream: null | user.llm.Config$stream
}
class user.llm.Config {
  model: string
}
function user.llm.Config.to_json(self: user.llm.Config) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Config>(self)) : baml.json.json
}
function user.llm.Config.from_json(j: baml.json.json) -> user.llm.Config throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.llm.Config
}
class user.llm.Response {
  text: string
}
function user.llm.Response.to_json(self: user.llm.Response) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Response>(self)) : baml.json.json
}
function user.llm.Response.from_json(j: baml.json.json) -> user.llm.Response throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.llm.Response
}
function user.llm.LlmUsesOwnStream(r: user.llm.Response$stream) -> string throws never {
  { : null | string
    r.text : null | string
  }
  !! 228..239: type mismatch: expected string, got null | string
}
function user.llm.LlmUsesRootStream(c: user.Config$stream) -> string throws never {
  { : null | string
    c.key : null | string
  }
  !! 345..355: type mismatch: expected string, got null | string
}
class user.llm.LlmWithStreamFields {
  own_stream: user.llm.Response$stream
  root_stream: user.Config$stream
}
function user.llm.LlmWithStreamFields.to_json(self: user.llm.LlmWithStreamFields) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<LlmWithStreamFields>(self)) : baml.json.json
}
function user.llm.LlmWithStreamFields.from_json(j: baml.json.json) -> user.llm.LlmWithStreamFields throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.llm.LlmWithStreamFields
}
class user.llm.Config$stream {
  model: null | string
}
class user.llm.Response$stream {
  text: null | string
}
class user.llm.LlmWithStreamFields$stream {
  own_stream: null | user.llm.Response$stream
  root_stream: null | user.Config$stream
}
