baml_language/crates/baml_tests/snapshots/diagnostic_errors/namespaces_stream_direct_ref/baml_tests__diagnostic_errors__namespaces_stream_direct_ref__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 34944
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected string, got null | string
    ╭─[ main.baml:20:57 ]
    │
 20 │ ╭─▶ function RootUsesOwnStream(c: Config$stream) -> string {
 21 │ ├─▶     c.key
    │ │               
    │ ╰─────────────── type mismatch: expected string, got null | string
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected string, got null | string
    ╭─[ main.baml:25:68 ]
    │
 25 │ ╭─▶ function RootUsesLlmStream(r: root.llm.Response$stream) -> string {
 26 │ ├─▶     r.text
    │ │                
    │ ╰──────────────── type mismatch: expected string, got null | string
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected string, got null | string
    ╭─[ models.baml:12:58 ]
    │
 12 │ ╭─▶ function LlmUsesOwnStream(r: Response$stream) -> string {
 13 │ ├─▶     r.text
    │ │                
    │ ╰──────────────── type mismatch: expected string, got null | string
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected string, got null | string
    ╭─[ models.baml:17:62 ]
    │
 17 │ ╭─▶ function LlmUsesRootStream(c: root.Config$stream) -> string {
 18 │ ├─▶     c.key
    │ │               
    │ ╰─────────────── type mismatch: expected string, got null | string
    │     
    │     Note: Error code: E0001
────╯
